cluster/homelab/apps/external/plausible/endpoint.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: plausible
  namespace: external
subsets:
  - addresses:
    - ip: 10.27.10.14
    ports:
      - name: plausible-port
        protocol: TCP
        port: 8000
