cluster/homelab/apps/external/plausible/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: plausible-ingress
  namespace: external
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`analytics.oplabs.us`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: crowdsec-bouncer
          namespace: traefik
      services:
        - name: plausible
          port: 8000
  tls:
    secretName: oplabs-us-tls
